--- a/index.html
+++ b/index.html
@@ -11,27 +11,20 @@
 
 <body>
 
-
-    <div class="crt-todo">
-        <input type="text" class="create">
-        <input type="button" value="Add" class="btn">
-
-    </div>
-    <div class="wrapper">
-        <div class="todos">
-
-        </div>
-        <div draggable="true" class="todos-done">
-            <div class="done">
-
+    <div class="kanban">
+        <div class="kanban__column">
+            <div class="kanban__column-title">Not Started</div>
+            <div class="kanban__items">
+                <div class="kanban__item-input" contenteditable>Wash the Dishes</div>
+                <div class="kanban__dropzone"></div>
             </div>
+            <button class="kanban__add-item" type="button">+Add</button>
         </div>
     </div>
 
 
 
-
-    <script src="app.js"></script>
+    <script src="js/app.js" type="module"></script>
 </body>
 
 </html>
