--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
     <div class="kanban">
-        <div class="kanban__column">
+        <!-- <div class="kanban__column">
             <div class="kanban__column-title">Not Started</div>
             <div class="kanban__items">
                 <div class="kanban__item-input" contenteditable>Wash the Dishes</div>
                 <div class="kanban__dropzone"></div>
             </div>
             <button class="kanban__add-item" type="button">+Add</button>
-        </div>
+        </div>-->
     </div>
 
 
